--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -6,7 +6,6 @@
     // outline: solid red 2px;
     @include flexCenter;
     padding: 2rem;
-    background: rgb(7, 7, 7);
 }
 
 .header__nav {
